--- a/front/src/app/globals.scss
+++ b/front/src/app/globals.scss
@@ -2,6 +2,8 @@
   --black: #100706;
   --white: #fff;
   --gray: #333333;
+
+  --header-height: 88px;
 }
 
 html,
@@ -13,6 +15,7 @@ body {
   padding: 0;
   background-color: var(--black);
   color: var(--white);
+  font-family: var(--font-sawarabi-gothic), var(--font-neoneon), sans-serif;
 }
 
 body * {
