--- a/front/src/components/Footer/Footer.module.scss
+++ b/front/src/components/Footer/Footer.module.scss
@@ -11,6 +11,7 @@
   }
 }
 
+/* SNS */
 .snsContainer {
   display: grid;
   justify-content: center;
@@ -51,6 +52,7 @@
   }
 }
 
+/* ロゴ */
 .logo {
   display: grid;
   justify-content: center;
@@ -65,6 +67,9 @@
 }
 
 .circle {
+  display: grid;
+  justify-content: center;
+  align-items: center;
   position: relative;
   width: 168px;
   height: 168px;
@@ -79,6 +84,12 @@
   }
 }
 
+.logoImg {
+  width: 168px;
+  height: 72px;
+}
+
+/* プライバシーポリシー・利用規約・お問い合わせ */
 .items {
   display: grid;
   justify-content: center;
@@ -112,16 +123,13 @@
   }
 }
 
+/* 著作権表示 */
 .copyrights {
   display: flex;
   justify-content: center;
   align-items: center;
   grid-row: 3 / 4;
   grid-column: 1 / 3;
-
-  p {
-    font-size: 8px;
-  }
 
   @media screen and (min-width: 1024px) {
     grid-row: 2 / 3;
