--- a/front/src/components/Header/Header.module.scss
+++ b/front/src/components/Header/Header.module.scss
@@ -2,7 +2,7 @@
 .header {
   display: flex;
   justify-content: space-between;
-  padding: 16px 16px;
+  padding: 16px 24px 0;
   height: var(--header-height);
   width: 100%;
   z-index: 10;
@@ -30,7 +30,7 @@
   position: fixed;
   z-index: 9999;
   top: 16px;
-  right: 16px;
+  right: 24px;
   width: 56px;
   height: 56px;
   border-radius: 50%;
