--- a/front/src/app/page.module.scss
+++ b/front/src/app/page.module.scss
@@ -1,5 +1,8 @@
-/* 変数の定義 */
+/*
+ * 変数の定義
+ */
 $earth-width: 100%;
+
 /*
  * ヒーローセクション
  */
@@ -199,7 +202,7 @@ $earth-width: 100%;
   height: auto;
 
   @media screen and (min-width: 1280px) {
-    width: 25%;
+    width: 30%;
   }
 }
 
@@ -262,5 +265,122 @@ $earth-width: 100%;
     width: 32px;
     height: 32px;
     margin-left: 16px;
+  }
+}
+
+/*
+ * Featuresセクション
+ */
+.featuresWrapper {
+  min-height: 100vh;
+  padding: 0 24px;
+
+  @media screen and (min-width: 1280px) {
+    padding: 0 80px;
+  }
+}
+
+.featuresContainer {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+
+  @media screen and (min-width: 1280px) {
+    gap: 24px;
+  }
+}
+
+/* Featuresの画像 */
+.features {
+  text-align: left;
+  width: 100%;
+  margin-top: var(--header-height);
+
+  @media screen and (min-width: 1280px) {
+    margin-top: 0;
+  }
+}
+
+.featuresImg {
+  width: 70%;
+  height: auto;
+
+  @media screen and (min-width: 1280px) {
+    width: 30%;
+  }
+}
+
+/* Featuresコンテンツ */
+.featuresContent {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  gap: 16px;
+
+  @media screen and (min-width: 1280px) {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    gap: 4%;
+  }
+}
+
+/* Featuresのタイトル */
+.featuresTitle {
+  margin-bottom: 40px;
+
+  @media screen and (min-width: 1280px) {
+    margin-bottom: 48px;
+  }
+
+  span {
+    display: inline-block;
+    border-bottom: 6px solid var(--light-blue);
+    font-size: 20px;
+
+    @media screen and (min-width: 1280px) {
+      font-size: 24px;
+    }
+  }
+}
+
+.titleNumber {
+  position: relative;
+  display: inline-block;
+  margin-right: 56px;
+  width: 56px;
+  height: 56px;
+
+  @media screen and (min-width: 1280px) {
+    margin-right: 72px;
+    width: 72px;
+    height: 72px;
+  }
+}
+
+.number {
+  height: 100%;
+  width: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: 120%;
+  width: auto;
+  color: var(--light-blue);
+}
+
+/* Featuresの説明 */
+.featureDescription {
+  font-size: 16px;
+
+  @media screen and (min-width: 1280px) {
+    font-size: 18px;
   }
 }
