--- a/front/src/app/page.module.scss
+++ b/front/src/app/page.module.scss
@@ -188,31 +188,44 @@ $earth-width: 100%;
  * Aboutセクション
  */
 .aboutWrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   min-height: 100vh;
+  padding: 0 24px;
+
+  @media screen and (min-width: 1024px) {
+    padding: 0 80px;
+  }
 }
 
 .aboutContainer {
-  padding: 0 24px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  gap: 16px;
 
-  @media screen and (min-width: 1280px) {
-    padding: 0 80px;
+  @media screen and (min-width: 1024px) {
+    gap: 24px;
   }
 }
 
 /* Aboutの画像 */
 .about {
   text-align: right;
+  width: 100%;
+  margin-top: var(--header-height);
 }
 
 .aboutImg {
   width: 50%;
   height: auto;
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1024px) {
     width: 30%;
+  }
+
+  @media screen and (min-width: 1280px) {
+    width: 20%;
   }
 }
 
@@ -231,6 +244,11 @@ $earth-width: 100%;
   font-size: 20px;
   margin-bottom: 20px;
 
+  @media screen and (min-width: 768px) {
+    font-size: 28px;
+    margin-bottom: 20px;
+  }
+
   @media screen and (min-width: 1024px) {
     font-size: 38px;
     margin-bottom: 24px;
@@ -239,6 +257,14 @@ $earth-width: 100%;
 
 .description {
   font-size: 16px;
+
+  @media screen and (min-width: 768px) {
+    font-size: 18px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    font-size: 20px;
+  }
 }
 
 /* クォーテーション画像 */
@@ -247,7 +273,12 @@ $earth-width: 100%;
     font-size: 18px;
     height: 24px;
 
-    @media screen and (min-width: 1280px) {
+    @media screen and (min-width: 768px) {
+      font-size: 20px;
+      height: 28px;
+    }
+
+    @media screen and (min-width: 1024px) {
       font-size: 24px;
       height: 32px;
     }
@@ -259,7 +290,13 @@ $earth-width: 100%;
   height: 24px;
   margin-right: 6px;
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 768px) {
+    width: 28px;
+    height: 28px;
+    margin-right: 8px;
+  }
+
+  @media screen and (min-width: 1024px) {
     width: 32px;
     height: 32px;
     margin-right: 16px;
@@ -271,7 +308,13 @@ $earth-width: 100%;
   height: 24px;
   margin-left: 6px;
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 768px) {
+    width: 28px;
+    height: 28px;
+    margin-left: 8px;
+  }
+
+  @media screen and (min-width: 1024px) {
     width: 32px;
     height: 32px;
     margin-left: 16px;
@@ -308,10 +351,6 @@ $earth-width: 100%;
   text-align: left;
   width: 100%;
   margin-top: var(--header-height);
-
-  @media screen and (min-width: 768px) {
-    margin-top: 0;
-  }
 }
 
 .featuresImg {
