--- a/front/src/app/page.module.scss
+++ b/front/src/app/page.module.scss
@@ -441,3 +441,25 @@ $earth-width: 100%;
     font-size: 18px;
   }
 }
+
+/*
+ * ログインセクション
+ */
+.loginWrapper {
+  min-height: 50vh;
+  height: auto;
+  padding: 0 24px;
+
+  @media screen and (min-width: 1024px) {
+    padding: 0 80px;
+  }
+}
+
+.loginContainer {
+  min-height: 50vh;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
