--- a/front/src/components/elements/Button/Button.module.scss
+++ b/front/src/components/elements/Button/Button.module.scss
@@ -1,71 +1,164 @@
-.button {
-  font-family: var(--font-neoneon);
+@keyframes flicker-pink {
+  0%,
+  19%,
+  21%,
+  23%,
+  25%,
+  54%,
+  56%,
+  100% {
+    text-shadow:
+      -0.2rem -0.2rem 1rem var(--white),
+      0.2rem 0.2rem 1rem var(--white),
+      0 0 2rem var(--pink),
+      0 0 4rem var(--pink),
+      0 0 6rem var(--pink),
+      0 0 8rem var(--pink),
+      0 0 10rem var(--pink);
+
+    box-shadow:
+      0 0 0.5rem var(--white),
+      inset 0 0 0.5rem var(--white),
+      0 0 2rem var(--pink),
+      inset 0 0 2rem var(--pink),
+      0 0 4rem var(--pink),
+      inset 0 0 4rem var(--pink);
+  }
+
+  20%,
+  24%,
+  55% {
+    text-shadow: none;
+    box-shadow: none;
+  }
+}
+
+@keyframes flicker-light-blue {
+  0%,
+  19%,
+  21%,
+  23%,
+  25%,
+  54%,
+  56%,
+  100% {
+    text-shadow:
+      -0.2rem -0.2rem 1rem var(--white),
+      0.2rem 0.2rem 1rem var(--white),
+      0 0 2rem var(--light-blue),
+      0 0 4rem var(--light-blue),
+      0 0 6rem var(--light-blue),
+      0 0 8rem var(--light-blue),
+      0 0 10rem var(--light-blue);
+
+    box-shadow:
+      0 0 0.5rem var(--white),
+      inset 0 0 0.5rem var(--white),
+      0 0 2rem var(--light-blue),
+      inset 0 0 2rem var(--light-blue),
+      0 0 4rem var(--light-blue),
+      inset 0 0 4rem var(--light-blue);
+  }
+
+  20%,
+  24%,
+  55% {
+    text-shadow: none;
+    box-shadow: none;
+  }
+}
+
+@mixin baseButton($text-shadow-color) {
   font-weight: bold;
-  font-style: italic;
   border-style: solid;
   color: var(--white);
   border-color: var(--white);
   background: transparent;
-  animation: flicker 2.5s infinite alternate;
   cursor: pointer;
+  max-width: calc(100% - 48px);
 
   &:focus {
     outline: none;
+  }
+
+  // 選択時の挙動
+  &::-moz-selection {
+    border-color: $text-shadow-color;
+    color: $text-shadow-color;
+  }
+  &::selection {
+    border-color: $text-shadow-color;
+    color: $text-shadow-color;
+  }
+
+  span {
+    display: block;
   }
 }
 
 /* Colors */
 .pink {
-  // 選択時の挙動
-  &::-moz-selection {
-    border-color: var(--pink);
-    color: var(--pink);
-  }
-  &::selection {
-    border-color: var(--pink);
-    color: var(--pink);
+  @include baseButton(var(--pink));
+
+  &.flicker {
+    font-family: var(--font-neoneon);
+    animation: flicker-pink 2.5s infinite alternate;
   }
 
-  @keyframes flicker {
-    0%,
-    19%,
-    21%,
-    23%,
-    25%,
-    54%,
-    56%,
-    100% {
-      text-shadow:
-        -0.2rem -0.2rem 1rem #fff,
-        0.2rem 0.2rem 1rem #fff,
-        0 0 2rem var(--pink),
-        0 0 4rem var(--pink),
-        0 0 6rem var(--pink),
-        0 0 8rem var(--pink),
-        0 0 10rem var(--pink);
+  &.no-flicker {
+    font-family: var(--font-sawarabi-gothic);
+    box-shadow:
+      0 0 0.5rem var(--white),
+      inset 0 0 0.5rem var(--white),
+      0 0 2rem var(--pink),
+      inset 0 0 2rem var(--pink),
+      0 0 4rem var(--pink),
+      inset 0 0 4rem var(--pink);
 
-      box-shadow:
-        0 0 0.5rem #fff,
-        inset 0 0 0.5rem #fff,
-        0 0 2rem var(--pink),
-        inset 0 0 2rem var(--pink),
-        0 0 4rem var(--pink),
-        inset 0 0 4rem var(--pink);
-    }
+    text-shadow:
+      -0.2rem -0.2rem 1rem var(--white),
+      0.2rem 0.2rem 1rem var(--white),
+      0 0 2rem var(--pink),
+      0 0 4rem var(--pink),
+      0 0 6rem var(--pink),
+      0 0 8rem var(--pink),
+      0 0 10rem var(--pink);
+  }
+}
 
-    20%,
-    24%,
-    55% {
-      text-shadow: none;
-      box-shadow: none;
-    }
+.light-blue {
+  @include baseButton(var(--light-blue));
+
+  &.flicker {
+    font-family: var(--font-neoneon);
+    animation: flicker-light-blue 2.5s infinite alternate;
+  }
+
+  &.no-flicker {
+    font-family: var(--font-sawarabi-gothic);
+    box-shadow:
+      0 0 0.5rem var(--white),
+      inset 0 0 0.5rem var(--white),
+      0 0 2rem var(--light-blue),
+      inset 0 0 2rem var(--light-blue),
+      0 0 4rem var(--light-blue),
+      inset 0 0 4rem var(--light-blue);
+
+    text-shadow:
+      -0.2rem -0.2rem 1rem var(--white),
+      0.2rem 0.2rem 1rem var(--white),
+      0 0 2rem var(--light-blue),
+      0 0 4rem var(--light-blue),
+      0 0 6rem var(--light-blue),
+      0 0 8rem var(--light-blue),
+      0 0 10rem var(--light-blue);
   }
 }
 
 /* Sizes */
 .large {
-  font-size: 32px;
-  padding: 1.5rem 4rem;
+  font-size: 28px;
+  padding: 1.5rem 3rem;
   border-radius: 1rem;
   border-width: 0.2rem;
 
