--- a/front/src/components/elements/Button/Button.module.scss
+++ b/front/src/components/elements/Button/Button.module.scss
@@ -76,6 +76,8 @@
   background: transparent;
   cursor: pointer;
   max-width: calc(100% - 48px);
+  position: relative;
+  z-index: 10;
 
   &:focus {
     outline: none;
