--- a/front/src/components/elements/Loading/Loading.module.scss
+++ b/front/src/components/elements/Loading/Loading.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: calc(100% - var(--header-height));
+  height: calc(100vh - var(--header-height));
 }
 
 .spinnerBox {
