--- a/front/src/app/auth/signin/Signin.module.scss
+++ b/front/src/app/auth/signin/Signin.module.scss
@@ -3,7 +3,9 @@
   display: grid;
   place-items: center;
   width: 100%;
-  height: 100%;
+  height: calc(100vh - var(--header-height));
+  position: relative;
+  z-index: 10;
 }
 
 .window {
@@ -37,6 +39,9 @@
 .description {
   font-size: 10px;
   color: var(--black);
+  a {
+    text-decoration: underline;
+  }
 
   @media (min-width: 768px) {
     font-size: 12px;
