--- a/front/src/app/presentation/InputTheme/InputThemePresentation.module.scss
+++ b/front/src/app/presentation/InputTheme/InputThemePresentation.module.scss
@@ -4,7 +4,7 @@
   position: relative;
   display: flex;
   justify-content: center;
-  align-items: start;
+  align-items: flex-start;
 }
 
 .container {
