fix: テーマが保存されるようフロントエンドコード修正 #20

--- a/front/src/app/presentation/InputTheme/InputThemePresentation.module.scss
+++ b/front/src/app/presentation/InputTheme/InputThemePresentation.module.scss
@@ -59,6 +59,12 @@
   margin-top: 16px;
 }
 
+.error {
+  color: var(--red);
+  font-size: 16px;
+  margin: 8px 0 4px;
+}
+
 /* テキストエリア */
 .textareaContainer {
   width: 100%;
