--- a/front/src/app/globals.scss
+++ b/front/src/app/globals.scss
@@ -82,6 +82,7 @@
   --light-blue: #4ac7d1;
   --pink: #fc6eb3;
   --purple: #6a00b7;
+  --red: #d5264c;
 
   --header-height: 88px;
   --page-padding: 24px;
