add: テーマカテゴリ選択画面フロントエンド実装追加 #21

--- a/front/src/app/globals.scss
+++ b/front/src/app/globals.scss
@@ -79,10 +79,12 @@
   --black: #100706;
   --white: #fff;
   --gray: #333333;
+  --light-gray: #4c5158;
   --light-blue: #4ac7d1;
   --pink: #fc6eb3;
   --purple: #6a00b7;
   --red: #d5264c;
+  --light-green: #33e9c6;
 
   --header-height: 88px;
   --page-padding: 24px;
