--- a/front/src/app/presentation/GenerateTheme/GenerateThemePresentation.module.scss
+++ b/front/src/app/presentation/GenerateTheme/GenerateThemePresentation.module.scss
@@ -48,8 +48,8 @@
   }
 }
 
-/* フォーム */
-.form {
+/* 回答フォーム */
+.answerForm {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -94,7 +94,7 @@
   text-align: center;
   width: 500px;
   height: 100px;
-  // animation: bound-anim 1.5s infinite;
+  animation: bound-anim 1.5s infinite;
 }
 
 @keyframes bound-anim {
@@ -143,6 +143,10 @@
   span {
     color: var(--red);
   }
+
+  @media screen and (min-width: 1024px) {
+    font-size: 16px;
+  }
 }
 
 .cautionIcon {
@@ -174,11 +178,45 @@
   height: 20px;
 }
 
+/* 生成テーマエリア */
+.themesGenerated {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.themesSuggestion {
+  margin: 40px 0 16px;
+  font-size: 16px;
+  width: 100%;
+
+  @media screen and (min-width: 1024px) {
+    font-size: 20px;
+  }
+}
+
+/* テーマ選択フォーム */
+.selectThemeForm {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
 /* エラーメッセージ */
 .error {
   color: var(--red);
   font-size: 14px;
   margin: 8px 0 4px;
+}
+
+/* テーマ生成中ローディング */
+.loadingContainer {
+  background-color: var(--black);
+  border-color: var(--black);
 }
 
 /* 戻るボタン */
