--- a/front/src/app/presentation/GenerateIdeas/GenerateIdeasPresentation.module.scss
+++ b/front/src/app/presentation/GenerateIdeas/GenerateIdeasPresentation.module.scss
@@ -276,13 +276,13 @@
   align-items: flex-end;
   gap: 8px;
   width: 100%;
-  margin: 16px 0 24px;
+  margin: 16px 0 30px;
   padding: 24px;
   border: 2px solid var(--light-gray);
   border-radius: 8px;
 
   @media screen and (min-width: 1024px) {
-    margin: 24px 0 32px;
+    margin: 24px 0 48px;
     border-radius: 16px;
   }
 }
@@ -376,4 +376,12 @@
   100% {
     inset: 0 35px 35px 0;
   }
+}
+
+/* AI回答保存フォーム */
+.aiAnswerForm {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
 }
