--- a/front/src/app/presentation/IdeaMemosUuid/IdeaMemosUuidPresentation.module.scss
+++ b/front/src/app/presentation/IdeaMemosUuid/IdeaMemosUuidPresentation.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
-  height: 100%;
-  width: 100%;
+  min-height: calc(100vh - var(--header-height));
+  width: 100vw;
   position: relative;
   display: flex;
   justify-content: center;
@@ -12,13 +12,28 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  height: 100%;
-  width: 100%;
-}
+  height: calc(100% - var(--back-button-length) - var(--page-padding));
+  width: calc(100% - var(--page-padding) * 2);
+  padding-bottom: calc(var(--back-button-length) + var(--page-padding) + 80px);
 
+  @media screen and (min-width: 1024px) {
+    height: calc(100% - var(--back-button-length) - var(--page-padding-lg));
+    width: calc(100% - var(--page-padding-lg) * 2);
+    padding-bottom: calc(
+      var(--back-button-length) + var(--page-padding-lg) + 160px
+    );
+  }
+}
 .content {
   width: 100%;
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  @media screen and (min-width: 768px) {
+    width: 60%;
+  }
 }
 
 .cardContainer {
@@ -26,6 +41,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
 }
 
 /* header */
@@ -112,21 +128,19 @@
   }
 }
 
-.backButton {
-  position: absolute;
-  left: 20px;
-
-  @media screen and (min-width: 768px) {
-    left: 24px;
-  }
+/* 編集・削除・キャンセルボタン */
+.buttonContainer {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-top: 32px;
 }
 
-/* 編集・削除ボタン */
 .buttons {
   display: flex;
   justify-content: canter;
   align-items: center;
-  margin-right: 24px;
   gap: 8px;
 }
 
@@ -139,12 +153,12 @@
   gap: 4px;
 }
 
-.buttonSentence {
-  display: none;
-
-  @media screen and (min-width: 1024px) {
-    display: block;
-  }
+.cancelButton {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
 }
 
 /* エラー */
