--- a/front/src/app/presentation/GenerateIdeas/GenerateIdeasPresentation.module.scss
+++ b/front/src/app/presentation/GenerateIdeas/GenerateIdeasPresentation.module.scss
@@ -182,14 +182,15 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 16px;
   width: 100%;
 }
 
 /* ヒント */
 .hint {
   display: grid;
-  grid-template-columns: 80px 8px 1fr;
-  grid-template-rows: 1fr 80px;
+  grid-template-columns: 1fr;
+  grid-template-rows: 60px 120px 1fr;
   width: 100%;
   margin-bottom: 40px;
 
@@ -202,40 +203,48 @@
 }
 
 .fukidashi {
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
-  width: 80px;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 12px;
+  font-size: 14px;
   color: var(--white);
+  grid-row: 1 / 2;
 
   @media screen and (min-width: 1280px) {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
     width: 120px;
-    font-size: 14px;
   }
 }
 
 .astronaut {
-  grid-column: 1 / 2;
-  grid-row: 2 / 3;
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  grid-row: 2 / 3;
+
+  @media screen and (min-width: 1280px) {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+  }
 }
 
 .blobContainer {
-  grid-column: 3 / 4;
-  grid-row: 1 / 3;
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
+  grid-row: 3 / 4;
+
+  @media screen and (min-width: 1280px) {
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
+  }
 }
 
 .blobComment {
