--- a/front/src/components/elements/IdeaMemoCard/IdeaMemoCard.module.scss
+++ b/front/src/components/elements/IdeaMemoCard/IdeaMemoCard.module.scss
@@ -1,7 +1,7 @@
 .cardContainer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   border: 4px solid var(--light-gray);
   border-radius: 16px;
@@ -16,7 +16,7 @@
 
 .cardHeader {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   width: 100%;
   padding: 12px 16px 16px 0;
