--- a/front/src/app/presentation/Home/HomePresentation.module.scss
+++ b/front/src/app/presentation/Home/HomePresentation.module.scss
@@ -6,6 +6,26 @@ $earth-width: 100%;
 .main {
   height: 100%;
   width: 100%;
+  position: relative;
+
+  &::before {
+    position: absolute;
+    top: calc(-1 * var(--header-height));
+    width: 100%;
+    height: 100%;
+    content: "";
+    background-image: url("/images/background.svg");
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+
+    @media screen and (min-width: 768px) {
+      background-image: url("/images/background-md.svg");
+    }
+
+    @media screen and (min-width: 1280px) {
+      background-image: url("/images/background-lg.svg");
+    }
+  }
 }
 
 /*
@@ -47,9 +67,10 @@ $earth-width: 100%;
 /* 文章 */
 .slogan {
   position: absolute;
-  font-size: 48px;
-  font-family: var(--font-neoneon);
-  font-weight: bold;
+  font-size: 56px;
+  font-family: var(--font-open-sans);
+  font-weight: 700;
+  letter-spacing: -0.25rem;
   text-align: center;
   width: 100%;
   top: calc(50% - var(--header-height));
@@ -57,30 +78,47 @@ $earth-width: 100%;
   transform: translate(-50%, -50%);
   z-index: 10;
   color: var(--white);
-  text-shadow: 0 0 30px var(--white);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: calc(100% - var(--page-padding) * 2);
 
   span {
-    display: block;
+    line-height: 56px;
+    height: 56px;
+  }
+
+  span:nth-child(1) {
+    color: transparent;
+    -webkit-text-stroke: 2px var(--white);
   }
 
   @media screen and (min-width: 768px) {
-    font-size: 64px;
-  }
-
-  @media screen and (min-width: 1280px) {
-    font-size: 80px;
+    font-size: 96px;
 
     span {
-      display: inline-block;
+      line-height: 96px;
+      height: 96px;
+    }
+  }
+
+  @media screen and (min-width: 1024px) {
+    width: calc(100% - var(--page-padding-lg) * 2);
+    font-size: 120px;
+
+    span {
+      line-height: 120px;
+      height: 120px;
     }
   }
 }
 
 /* 背景 */
-.hero {
-  height: 100vh;
-  width: 100vw;
-}
+// .hero {
+//   height: 100vh;
+//   width: 100vw;
+// }
 
 /* 背景の装飾(左) */
 .topLeftBg {
@@ -240,6 +278,8 @@ $earth-width: 100%;
   display: grid;
   grid-template-columns: 1fr;
   gap: 16px;
+  position: relative;
+  z-index: 10;
 
   @media screen and (min-width: 1280px) {
     padding: 0 20%;
@@ -248,6 +288,7 @@ $earth-width: 100%;
 
 .aboutTitleText {
   font-size: 20px;
+  font-weight: 500;
   margin-bottom: 20px;
 
   @media screen and (min-width: 768px) {
@@ -371,11 +412,7 @@ $earth-width: 100%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 16px;
-
-  @media screen and (min-width: 1024px) {
-    gap: 24px;
-  }
+  gap: 24px;
 }
 
 /* Featuresの画像 */
@@ -399,6 +436,14 @@ $earth-width: 100%;
 }
 
 /* Featuresコンテンツ */
+.noMvpFeature {
+  opacity: 0.5;
+}
+
+.noMvp {
+  color: var(--light-blue);
+}
+
 .featuresContent {
   display: grid;
   grid-template-rows: repeat(3, 1fr);
@@ -427,6 +472,7 @@ $earth-width: 100%;
     display: inline-block;
     border-bottom: 6px solid var(--light-blue);
     font-size: 20px;
+    font-weight: 700;
 
     @media screen and (min-width: 1280px) {
       font-size: 24px;
