--- a/front/src/components/elements/Button/Button.module.scss
+++ b/front/src/components/elements/Button/Button.module.scss
@@ -1,5 +1,5 @@
 @mixin baseButton($color) {
-  font-weight: bold;
+  font-weight: 700;
   background: $color;
   text-align: center;
   position: relative;
