--- a/front/src/components/elements/SectionTitle/SectionTitle.module.scss
+++ b/front/src/components/elements/SectionTitle/SectionTitle.module.scss
@@ -6,7 +6,7 @@
 
 .title {
   font-size: 12px;
-  font-weight: bold;
+  font-weight: 700;
   padding: 0.25rem 1.5rem;
   border: solid 2px var(--white);
   border-radius: 15px;
