--- a/front/src/app/globals.scss
+++ b/front/src/app/globals.scss
@@ -66,8 +66,8 @@
   --light-blue: #4ac7d1;
   --pink: #fc6eb3;
   --purple: #6a00b7;
+  --light-purple: #9f62f3;
   --red: #d5264c;
-  --light-green: #33e9c6;
 
   --header-height: 88px;
   --page-padding: 24px;
@@ -83,7 +83,7 @@ body {
   padding: 0;
   background-color: var(--black);
   color: var(--white);
-  font-family: var(--font-sawarabi-gothic), var(--font-neoneon), sans-serif;
+  font-family: var(--font-zenmaru-gothic), var(--font-open-sans), sans-serif;
 }
 
 body {
