--- a/front/src/app/presentation/EndSession/EndSessionPresentation.module.scss
+++ b/front/src/app/presentation/EndSession/EndSessionPresentation.module.scss
@@ -43,7 +43,17 @@
   justify-content: center;
   align-items: center;
   gap: 8px;
-  margin: 24px 0;
+  margin-top: 48px;
+
+  @media screen and (min-width: 1024px) {
+    gap: 16px;
+    margin-top: 64px;
+  }
+}
+
+.astronaut {
+  height: 120px;
+  width: auto;
 }
 
 .fukidashi {
@@ -57,8 +67,7 @@
 /* ブロブ */
 .endCommentContainer {
   position: relative;
-  margin-bottom: 16px;
-  width: 85%;
+  width: 100%;
   @media screen and (min-width: 1280px) {
     width: 50%;
   }
@@ -80,7 +89,8 @@
   text-align: center;
 
   span {
-    font-size: 20px;
+    font-size: 2rem;
+    font-weight: 500;
     color: var(--light-blue);
   }
 }
@@ -93,7 +103,8 @@
   align-items: center;
   gap: 16px;
   width: 100%;
-  margin-top: 40px;
+  margin-top: 16px;
+  margin-bottom: 40px;
 }
 
 .resultContainer {
@@ -114,13 +125,14 @@
 
 .resultCount {
   font-size: 16px;
+  font-weight: 700;
 
   @media screen and (min-width: 1024px) {
     font-size: 20px;
   }
 
   span {
-    font-size: 2rem;
+    font-size: 3rem;
     color: var(--pink);
   }
 }
