--- a/front/src/app/presentation/SelectMode/SelectModePresentation.module.scss
+++ b/front/src/app/presentation/SelectMode/SelectModePresentation.module.scss
@@ -56,9 +56,12 @@
 
 .comment {
   font-size: 16px;
+  width: 320px;
+  text-align: center;
 
   @media screen and (min-width: 1024px) {
     font-size: 20px;
+    width: 440px;
   }
 }
 
