--- a/front/src/components/elements/AiGenerationLoading/AiGenerationLoading.module.scss
+++ b/front/src/components/elements/AiGenerationLoading/AiGenerationLoading.module.scss
@@ -6,8 +6,8 @@
 }
 
 .spinnerBox {
-  width: 300px;
-  height: 300px;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -18,6 +18,7 @@
     color: var(--white);
     font-size: 20px;
     letter-spacing: 2px;
+    text-align: center;
   }
 }
 
