--- a/front/src/components/elements/IdeaMemoCard/IdeaMemoCard.module.scss
+++ b/front/src/components/elements/IdeaMemoCard/IdeaMemoCard.module.scss
@@ -9,20 +9,28 @@
 
   &:hover,
   &:active {
-    background-color: var(--light-gray);
-    opacity: 0.8;
+    opacity: 0.7;
   }
+}
+
+.headerBody {
+  width: 100%;
 }
 
 .cardHeader {
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-end;
   align-items: center;
   width: 100%;
-  padding: 12px 16px 16px 0;
+  height: 80px;
+  padding: 16px;
+
+  background-image: url("/images/bulb_background.webp");
+  background-position: center;
+  background-size: cover;
 
   @media screen and (min-width: 768px) {
-    padding: 16px 20px 20px 0;
+    padding: 20px;
   }
 }
 
@@ -33,7 +41,7 @@
 
 .cardBody {
   width: 100%;
-  padding: 0 16px;
+  padding: 16px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -41,7 +49,7 @@
   gap: 16px;
 
   @media screen and (min-width: 768px) {
-    padding: 0 20px;
+    padding: 20px;
   }
 }
 
@@ -68,8 +76,16 @@
 
 .cardFooter {
   width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
   text-align: end;
   padding: 16px;
+
+  background-image: url("/images/bulb_background.webp");
+  background-position: center;
+  background-size: cover;
 
   @media screen and (min-width: 768px) {
     padding: 20px;
