--- a/front/src/app/globals.scss
+++ b/front/src/app/globals.scss
@@ -97,3 +97,8 @@ body * {
   line-height: 1.7;
   -webkit-text-size-adjust: 100%;
 }
+
+.no-scroll {
+  overflow: hidden;
+  height: 100vh; // スクロールを無効
+}
