update: ドロワーメニューホバー時のCSSを変更 #154

--- a/front/src/components/layouts/Header/Header.module.scss
+++ b/front/src/components/layouts/Header/Header.module.scss
@@ -117,8 +117,9 @@
     gap: 8px;
 
     &:hover {
-      background-color: var(--gray);
-      opacity: 0.8;
+      span {
+        color: var(--purple);
+      }
     }
 
     span {
