--- a/front/src/app/presentation/MyPage/MyPagePresentation.module.scss
+++ b/front/src/app/presentation/MyPage/MyPagePresentation.module.scss
@@ -63,7 +63,7 @@
   h2 {
     font-size: 18px;
     font-weight: 500;
-    padding: 0.25rem 1rem;
+    // padding: 0.25rem 1rem;
     margin-bottom: 1rem;
     display: flex;
     flex-direction: column;
