--- a/front/src/components/elements/IdeaMemoList/IdeaMemoList.module.scss
+++ b/front/src/components/elements/IdeaMemoList/IdeaMemoList.module.scss
@@ -50,6 +50,13 @@
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 32px;
+}
+
+.svg {
+  height: 64px;
+  width: auto;
 }
