update: タッチデバイスで安定してhover, activeの動作を実現するためにonTouchStart/onTouchEndを追加 #159

--- a/front/src/components/layouts/Header/Header.module.scss
+++ b/front/src/components/layouts/Header/Header.module.scss
@@ -114,7 +114,9 @@
     padding: 24px;
     gap: 8px;
 
-    &:hover {
+    &:hover,
+    &:active,
+    &.touched {
       span {
         color: var(--purple);
       }
