fix: ラジオボタン選択時にセレクトしていない項目も色付けされる問題を修正 #163

--- a/front/src/components/elements/RadioButtons/RadioButtons.module.scss
+++ b/front/src/components/elements/RadioButtons/RadioButtons.module.scss
@@ -29,9 +29,11 @@
   padding-right: 16px;
   cursor: pointer;
 
-  &:hover {
-    background-color: var(--light-gray);
-    opacity: 0.8;
+  @media (hover: hover) and (pointer: fine) {
+    &:hover {
+      background-color: var(--light-gray);
+      opacity: 0.8;
+    }
   }
 }
 
