--- a/front/src/app/presentation/Home/HomePresentation.module.scss
+++ b/front/src/app/presentation/Home/HomePresentation.module.scss
@@ -263,6 +263,8 @@ $earth-width: 100%;
   width: 50%;
   height: auto;
   display: inline-block;
+  position: relative;
+  z-index: 10;
 
   @media screen and (min-width: 1024px) {
     width: 30%;
