--- a/front/src/app/presentation/IdeaMemos/IdeaMemosPresentation.module.scss
+++ b/front/src/app/presentation/IdeaMemos/IdeaMemosPresentation.module.scss
@@ -6,3 +6,56 @@
   justify-content: center;
   align-items: flex-start;
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  height: calc(100% - var(--back-button-length) - var(--page-padding));
+  width: calc(100% - var(--page-padding) * 2);
+  padding-bottom: calc(var(--back-button-length) + var(--page-padding) + 80px);
+
+  @media screen and (min-width: 1024px) {
+    height: calc(100% - var(--back-button-length) - var(--page-padding-lg));
+    width: calc(100% - var(--page-padding-lg) * 2);
+    padding-bottom: calc(
+      var(--back-button-length) + var(--page-padding-lg) + 160px
+    );
+  }
+}
+
+.noDataContainer {
+  height: calc(100vh - var(--back-button-length) - var(--page-padding));
+  width: 100%;
+  padding-bottom: calc(var(--back-button-length) + var(--page-padding) + 80px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  @media screen and (min-width: 1024px) {
+    height: calc(100vh - var(--back-button-length) - var(--page-padding-lg));
+    padding-bottom: calc(
+      var(--back-button-length) + var(--page-padding-lg) + 160px
+    );
+  }
+}
+
+.message {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 32px;
+}
+
+.svg {
+  height: 64px;
+  width: auto;
+}
+
+.pagination {
+  margin-top: 40px;
+}
