--- a/front/src/app/idea-memos/IdeaMemos.module.scss
+++ b/front/src/app/idea-memos/IdeaMemos.module.scss
@@ -24,3 +24,15 @@
     );
   }
 }
+
+.header {
+  width: 100%;
+  margin-top: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  @media screen and (min-width: 1024px) {
+    margin-top: 64px;
+  }
+}
