--- a/front/src/components/elements/IdeaMemoCard/IdeaMemoCard.module.scss
+++ b/front/src/components/elements/IdeaMemoCard/IdeaMemoCard.module.scss
@@ -18,10 +18,6 @@
   }
 }
 
-.headerBody {
-  width: 100%;
-}
-
 .cardHeader {
   display: flex;
   justify-content: flex-end;
@@ -35,10 +31,30 @@
   }
 }
 
-// .heartIcon {
-//   height: 40px;
-//   width: auto;
-// }
+.heartLike {
+  height: 32px;
+  width: auto;
+  cursor: pointer;
+  transition: transform 0.25s ease-in-out;
+  transform: scale(1);
+}
+
+.heartUnlike {
+  height: 32px;
+  width: auto;
+  cursor: pointer;
+  transition: transform 0.25s ease-in-out;
+}
+
+.heartBeat {
+  animation: heartBeat 0.25s ease-in-out;
+}
+
+@keyframes heartBeat {
+  50% {
+    transform: scale(1.2);
+  }
+}
 
 .cardBody {
   width: 100%;
