--- a/front/src/app/idea-memos/IdeaMemos.module.scss
+++ b/front/src/app/idea-memos/IdeaMemos.module.scss
@@ -29,7 +29,7 @@
   width: 100%;
   margin-top: 48px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 
   @media screen and (min-width: 1024px) {
