--- a/front/src/components/elements/IdeaMemoCardHeader/IdeaMemoCardHeader.module.scss
+++ b/front/src/components/elements/IdeaMemoCardHeader/IdeaMemoCardHeader.module.scss
@@ -4,34 +4,9 @@
   align-items: center;
   width: 100%;
   height: 80px;
-  padding: 16px;
+  padding: 16px 0 16px 16px;
 
   @media screen and (min-width: 768px) {
-    padding: 20px;
-  }
-}
-
-.heartLike {
-  height: 32px;
-  width: auto;
-  cursor: pointer;
-  transition: transform 0.25s ease-in-out;
-  transform: scale(1);
-}
-
-.heartUnlike {
-  height: 32px;
-  width: auto;
-  cursor: pointer;
-  transition: transform 0.25s ease-in-out;
-}
-
-.heartBeat {
-  animation: heartBeat 0.25s ease-in-out;
-}
-
-@keyframes heartBeat {
-  50% {
-    transform: scale(1.2);
+    padding: 20px 0 20px 20px;
   }
 }
