--- a/front/src/components/elements/LikeListButton/LikeListButton.module.scss
+++ b/front/src/components/elements/LikeListButton/LikeListButton.module.scss
@@ -6,6 +6,18 @@
   border-radius: 16px;
   height: 54px;
   width: 54px;
-  padding: 12px;
   cursor: pointer;
+}
+
+.like {
+  width: 24px;
+  height: 24px;
+  fill: var(--pink);
+  color: var(--pink);
+}
+
+.unlike {
+  width: 24px;
+  height: 24px;
+  color: var(--white);
 }
