--- a/front/src/features/home/components/HeroSection/HeroSection.module.scss
+++ b/front/src/features/home/components/HeroSection/HeroSection.module.scss
@@ -18,6 +18,7 @@ $earth-width: 100%;
   height: auto;
   overflow: hidden;
   animation: rotateEarth 180s linear infinite;
+  will-change: transform;
 
   @media screen and (min-width: 1280px) {
     $earth-width: 45%;
